# embedding-cache-inspector

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: create_sample_sqlite.py  sample.jsonl
src/embedding_cache_inspector/: __init__.py  audit.py  cli.py  loaders.py  models.py  reporter.py
tests/: test_audit.py  test_cli.py  test_jsonl_loader.py  test_reporter.py  test_sqlite_loader.py
