[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-cache-inspector"
version = "0.2.0"
description = "Local JSONL and SQLite embedding cache audit CLI for RAG developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Embedding Cache Inspector contributors" }]
keywords = ["embedding", "rag", "vector", "cache", "audit", "jsonl", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
embedding-cache-inspector = "embedding_cache_inspector.cli:main"
eci = "embedding_cache_inspector.cli:main"

[project.urls]
Homepage = "https://github.com/yanqr213/embedding-cache-inspector"
Repository = "https://github.com/yanqr213/embedding-cache-inspector"
Issues = "https://github.com/yanqr213/embedding-cache-inspector/issues"
Changelog = "https://github.com/yanqr213/embedding-cache-inspector/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
